Adding LPI error handling template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 
 project(LinuxProgramming)
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+#set(CMAKE_CXX_STANDARD 14)
+#set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Very useful for youcompleteme plugin
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(threads)
-#add_executable(hi threads/chronometer/chronometer.cpp)
-#target_link_libraries(hi PUBLIC pthread)
-
-
-#target_include_directories(LinuxProgramming PUBLIC
-    #"${PROJECT_BINARY_DIR}"
-    #"${PROJECT_SOURCE_DIR}/threads"
-    #)
+add_subdirectory(lpi_common)
