--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_subdirectory(threads)
 add_subdirectory(lpi_common)
 add_subdirectory(miscellaneous)
+add_subdirectory(IO)
