--- a/lpi_common/CMakeLists.txt
+++ b/lpi_common/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_C_STANDARD 11 PRIVATE)
-set(CMAKE_C_STANDARD_REQUIRED 11 PRIVATE)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED TRUE)
 
 add_library(liblpicommon error_functions.c get_num.c)
