--- a/miscellaneous/reboot/CMakeLists.txt
+++ b/miscellaneous/reboot/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_C_STANDARD 11 PRIVATE)
-set(CMAKE_C_STANDARD_REQUIRED TRUE PRIVATE)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED TRUE)
 
 add_executable(reboot reboot.c)
